--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "countup.js": "^2.6.2",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
+    "intersection-observer": "^0.12.2",
     "next": "13.3.1",
     "nodemailer": "^6.9.2",
     "postcss": "8.4.23",
