--- a/src/pages/api/projects-api.json
+++ b/src/pages/api/projects-api.json
@@ -11,9 +11,9 @@
                 "https://github.com/Luannunesesb01/Novo-portfolio-skills/assets/116287208/1b9c7086-73e5-44a0-b455-92773d40b992",
                 "https://github.com/Luannunesesb01/Novo-portfolio-skills/assets/116287208/72981be5-616e-47e0-a556-e585cbfdab68"
             ],
-            "capa": "https://user-images.githubusercontent.com/105875989/221195856-8c917cbd-ed6e-4f41-a922-3f4cb30fb095.png",
+            "capa": "https://github-production-user-asset-6210df.s3.amazonaws.com/105875989/242750061-82be5e71-1715-4dd6-88e5-24343806d5d9.png",
             "githubLink": "https://github.com/Luannunes02/noro-market/blob/main/README.md",
-            "gif": "https://user-images.githubusercontent.com/105875989/221195856-8c917cbd-ed6e-4f41-a922-3f4cb30fb095.png",
+            "gif": "https://github-production-user-asset-6210df.s3.amazonaws.com/105875989/242751829-84648cf7-0cb8-4cfe-a301-198a61d3ca2c.gif",
             "deploy": "https://noro-market.vercel.app",
             "descricao": "Loja virtual que desenvolvi, é possível acrescentar produtos no carrinho, calcúlar o frete para região(estou usando uma API de CEP para consultar), comprar os produtos. Tudo feito com um design amigável e eficaz."
         },        
