--- a/src/pages/api/projects-api-mobile.json
+++ b/src/pages/api/projects-api-mobile.json
@@ -11,9 +11,9 @@
                 "https://github.com/Luannunesesb01/Novo-portfolio-skills/assets/116287208/e51cc109-cdf9-4142-959f-458f75ed12b2"
             ],
             "descricao": "Aplicação completa para vendas, podendo tirar pedidos, consultar produtos e valores além de também conseguir consultar como estão as vendas para ver se o vendedor bateu a meta.",
-            "capa": "",            
-            "gif": "",
-            "githubLink": ""
+            "capa": "https://user-images.githubusercontent.com/105875989/242752037-2e522b8c-581f-4fd9-840a-f7d8c7d3fd5d.png",            
+            "gif": "https://user-images.githubusercontent.com/105875989/242752005-c26e3955-be4d-4ccf-80a7-bd9197da1a81.gif",
+            "githubLink": "https://github.com/Luannunes02/noroeste-bloco"
         },        
         {
             "id": 2,
